<resources>
    <string name="app_name">BuckeyEpartments</string>
    <string name="view_db">View All Listings</string>
    <string name="view_map">View Map</string>

    <!-- Used for extracting data from firebase return JSON -->
    <string name="data_rent_key">costOfRent</string>
    <string name="data_bed_bath_key">bedBath</string>
    <string name="data_bed_count_key">roomCount</string>
    <string name="data_bathroom_count_key">bathroomCount</string>
    <string name="data_address_key">address</string>
    <string name="data_street_address_key">streetAddress</string>
    <string name="data_city_key">city</string>
    <string name="data_zip_code_key">zipCode</string>

    <string name="state_initial">OH</string>

    <!-- Placeholder text -->
    <string name="image_description">This is the listing preview image</string>
    <string name="address_placeholder">1234 Something Street</string>
    <string name="bed_bath_placeholder">2 Bed, 1 Bath</string>
    <string name="rent_placeholder">100000</string>

    <!-- Hint text -->
    <string name="hint_street_address">1234 Something Street</string>
    <string name="hint_rest_of_address">Columbus, OH 43201</string>
    <string name="hint_bed_bath">2 Bed, 1 Bath</string>
    <string name="hint_rent">$1234</string>
    <string name="hint_email">something@gmail.com</string>
    <string name="hint_url">www.fakelink.com</string>
    <string name="hint_phone">123456789</string>

    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="button_favourite">View Favourite</string>
</resources>
