<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listing_image"
            android:contentDescription="@string/image_description"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/street_address"
                android:hint="@string/hint_street_address"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:padding="0dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rest_of_address"
                android:hint="@string/hint_rest_of_address"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:padding="0dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rent"
                android:hint="@string/hint_rent"
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bed_and_bath"
                android:hint="@string/hint_bed_bath"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/hint_email"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/url"
                android:autoLink="web"
                android:hint="@string/hint_url"
                android:textColor="#0000EE"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:hint="@string/hint_phone" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/update_button"
            android:background="@android:color/holo_blue_bright"
            android:id="@+id/edit_button"
            android:onClick="editListing"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/delete_button"
            android:id="@+id/delete_button"
            android:onClick="deleteListing"/>
    </LinearLayout>
</ScrollView>
